--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
 body {
     color: white;
     background-color: black;
+    margin: 0px;
 }
+
+header {
+    border-bottom: solid 2px rgb(42, 122, 228);
+    padding: 20px;
+    font-size: 32px;
+    color: rgb(42, 122, 228);
+}
+
 section {
     background: rgb(17, 222, 14);
     padding-bottom: 80px;
@@ -9,9 +18,11 @@ section {
     display: flex;
     justify-content: center;
 }
+
 div {
     margin-right: 20px;
 }
+
 .chamada-texto {
     margin-right: 5%;
    }
