--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     color: white;
     background-color: black;
     margin: 0px;
+    font-family: "Chakra Petch", sans-serif;
 }
 
 header {
@@ -21,15 +22,23 @@ section {
 
 .chamada-texto {
     margin-right: 5%;
-   }
+}
 
 img {
     height: 200px;
-  }
-  
+}
+
 .categoria-videos {
     display: flex;
     overflow-x: auto;
     gap: 10px;
 }
-         
+
+
+h1 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 20px;
+}
