--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     background-color: black;
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
+    margin-bottom: 100px;
 }
 
 header {
@@ -12,8 +13,8 @@ header {
     color: rgb(42, 122, 228);
 }
 
-section {
-    background: rgb(17, 222, 14);
+.chamada {
+    background: rgb(184, 156, 213);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
@@ -24,8 +25,12 @@ section {
     margin-right: 5%;
 }
 
-img {
-    height: 200px;
+h1 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 20px;
 }
 
 .categoria-videos {
@@ -34,11 +39,22 @@ img {
     gap: 10px;
 }
 
-
-h1 {
-    font-size: 40px;
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
 }
 
-p {
-    font-size: 20px;
+.categoria-videos img {
+    opacity: 0.5;
+    height: 200px;
+}
+
+.categoria-videos img:hover {
+    opacity: 1.0;
+    border: 3px solid green;
+}
+
+.categoria h2 {
+    color: rgb(42, 122, 228);
 }
